[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Ubuntu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Bitter.tres" type="DynamicFont" id=3]

[node name="main_menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 611.0
custom_constants/separation = 40

[node name="title" type="Label" parent="menu"]
margin_left = 237.0
margin_right = 587.0
margin_bottom = 88.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Omberma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="GridContainer" parent="menu"]
margin_left = 211.0
margin_top = 128.0
margin_right = 612.0
margin_bottom = 216.0
size_flags_horizontal = 4
custom_constants/hseparation = 50
columns = 3

[node name="name_label" type="Label" parent="menu/host"]
margin_right = 94.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode_edit" type="Label" parent="menu/host"]
margin_left = 144.0
margin_right = 270.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Mode"

[node name="spacer" type="Control" parent="menu/host"]
margin_left = 320.0
margin_right = 401.0
margin_bottom = 37.0

[node name="name_edit" type="LineEdit" parent="menu/host"]
margin_top = 41.0
margin_right = 94.0
margin_bottom = 88.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Joe"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode_dropdown" type="OptionButton" parent="menu/host"]
margin_left = 144.0
margin_top = 41.0
margin_right = 270.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Classic"
items = [ "Classic", null, false, 0, null, "UPnP", null, false, 1, null ]
selected = 0

[node name="host_button" type="Button" parent="menu/host"]
margin_left = 320.0
margin_top = 41.0
margin_right = 401.0
margin_bottom = 84.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="GridContainer" parent="menu"]
margin_left = 344.0
margin_top = 256.0
margin_right = 479.0
margin_bottom = 340.0
size_flags_horizontal = 4
columns = 2

[node name="ip_label" type="Label" parent="menu/join"]
margin_right = 58.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "IP"

[node name="spacer" type="Control" parent="menu/join"]
margin_left = 62.0
margin_right = 135.0
margin_bottom = 37.0

[node name="ip_edit" type="LineEdit" parent="menu/join"]
margin_top = 41.0
margin_right = 58.0
margin_bottom = 84.0

[node name="join_button" type="Button" parent="menu/join"]
margin_left = 62.0
margin_top = 41.0
margin_right = 135.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="browse" type="Button" parent="menu"]
margin_left = 252.0
margin_top = 380.0
margin_right = 571.0
margin_bottom = 423.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Browse Local Servers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_label" type="Label" parent="menu"]
margin_left = 412.0
margin_top = 463.0
margin_right = 412.0
margin_bottom = 500.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.498039, 0.498039, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menu/host/host_button" to="." method="_on_host_pressed"]
[connection signal="pressed" from="menu/browse" to="." method="_on_browse_pressed"]
